--- a/view/index.html
+++ b/view/index.html
@@ -8,13 +8,12 @@
 </head>
 <style type="text/css">
     body {
-        /* TODO place your background here */
-        background-color: black;
+        background-color: #111111;
     }
 </style>
 
 <body>
-    <canvas id="gameCanvas"></canvas>
+    <canvas id="gameCanvas" width=800 height=600></canvas>
     <script src="../src/index.ts"></script>
 </body>
 
